--- a/source/localizable/generic.html.erb
+++ b/source/localizable/generic.html.erb
@@ -7,16 +7,13 @@ logo:
 
 
 language_tabs: # must be one of https://git.io/vQNgJ
-  - console
   - java: java
 
 toc_footers:
   - <a href='https://github.com/lord/slate'>Documentation Powered by Slate</a>
 
 includes:
-  - earn_crypto/wealth_manage/intro                      # Introduce
-  - earn_crypto/wealth_manage/buy_predict_product                # Wallet Data Endpoints
-  - earn_crypto/wealth_manage/errors                     # Errors
+  - generic/demo                # Wallet Data Endpoints
 
 
 search: true
