:pushpin: 固定版本号，修正 css 注释，解决兼容性问题

--- a/source/stylesheets/_rtl.scss
+++ b/source/stylesheets/_rtl.scss
@@ -1,12 +1,8 @@
-////////////////////////////////////////////////////////////////////////////////
-// RTL Styles Variables
-////////////////////////////////////////////////////////////////////////////////
+/* RTL Styles Variables */
 
 $default: auto;
 
-////////////////////////////////////////////////////////////////////////////////
-// TABLE OF CONTENTS
-////////////////////////////////////////////////////////////////////////////////
+/* TABLE OF CONTENTS */
 
 #toc>ul>li>a>span {
     float: left;
@@ -30,9 +26,7 @@ $default: auto;
     }
 }
 
-////////////////////////////////////////////////////////////////////////////////
-// PAGE LAYOUT AND CODE SAMPLE BACKGROUND
-////////////////////////////////////////////////////////////////////////////////
+/* PAGE LAYOUT AND CODE SAMPLE BACKGROUND */
 .page-wrapper {
     margin-#{left}: $default !important;
     margin-#{right}: $nav-width;
@@ -49,9 +43,7 @@ $default: auto;
     }
 }
 
-////////////////////////////////////////////////////////////////////////////////
-// CODE SAMPLE STYLES
-////////////////////////////////////////////////////////////////////////////////
+/* CODE SAMPLE STYLES */
 .content {
     &>h1,
     &>h2,
@@ -96,9 +88,7 @@ $default: auto;
     }
 }
 
-////////////////////////////////////////////////////////////////////////////////
-// TYPOGRAPHY
-////////////////////////////////////////////////////////////////////////////////
+/* TYPOGRAPHY */
 h1,
 h2,
 h3,
@@ -118,9 +108,7 @@ aside {
 }
 
 
-////////////////////////////////////////////////////////////////////////////////
-// RESPONSIVE DESIGN
-////////////////////////////////////////////////////////////////////////////////
+/* RESPONSIVE DESIGN */
 @media (max-width: $tablet-width) {
     .toc-wrapper {
         #{right}: -$nav-width;
