--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -2,7 +2,7 @@
 @import 'normalize';
 @import 'variables';
 @import 'icon-font';
-// @import 'rtl'; // uncomment to switch to RTL format
+/* @import 'rtl'; uncomment to switch to RTL format */
 
 /*
 Copyright 2008-2013 Concur Technologies, Inc.
@@ -20,9 +20,7 @@ License for the specific language governing permissions and limitations
 under the License.
 */
 
-////////////////////////////////////////////////////////////////////////////////
-// GENERAL STUFF
-////////////////////////////////////////////////////////////////////////////////
+/* GENERAL STUFF */
 
 html, body {
   /* Set height of body and the document to 100% for full page tabs */
@@ -40,9 +38,7 @@ html, body {
   -webkit-text-size-adjust: none; /* Never autoresize text */
 }
 
-////////////////////////////////////////////////////////////////////////////////
-// TABLE OF CONTENTS
-////////////////////////////////////////////////////////////////////////////////
+/* TABLE OF CONTENTS */
 
 #toc > ul > li > a > span {
   float: right;
@@ -66,7 +62,7 @@ html, body {
   font-size: 1em;
   font-weight: bold;
 
-  // language selector for mobile devices
+  /* language selector for mobile devices */
   .lang-selector {
     display: none;
     a {
@@ -75,7 +71,7 @@ html, body {
     }
   }
 
-  // This is the logo at the top of the ToC
+  /* This is the logo at the top of the ToC */
   .logo {
     display: block;
     max-width: 100%;
@@ -138,9 +134,9 @@ html, body {
   }
 
 
-  // The Table of Contents is composed of multiple nested
-  // unordered lists.  These styles remove the default
-  // styling of an unordered list because it is ugly.
+  /* The Table of Contents is composed of multiple nested */
+  /* unordered lists.  These styles remove the default */
+  /* styling of an unordered list because it is ugly. */
   ul, li {
     list-style: none;
     margin: 0;
@@ -155,14 +151,14 @@ html, body {
     transition-duration: 200ms;
   }
 
-  // This is the currently selected ToC entry
+  /* This is the currently selected ToC entry */
   .toc-link.active {
     background-color: $nav-active-bg;
     font-weight: bold;
     color: $nav-active-text;
   }
 
-  // this is parent links of the currently selected ToC entry
+  /* this is parent links of the currently selected ToC entry */
   .toc-link.active-parent {
     background-color: $nav-active-parent-bg;
     color: $nav-active-parent-text;
@@ -237,7 +233,7 @@ html, body {
   transition-duration: 130ms;
 }
 
-// button to show navigation on mobile devices
+/* button to show navigation on mobile devices */
 #nav-button {
   span {
     display: block;
@@ -248,7 +244,7 @@ html, body {
     transform: rotate(-90deg) translate(-100%, 0);
     border-radius: 0 0 0 5px;
   }
-  padding: 0 1.5em 5em 0; // increase touch size area
+  padding: 0 1.5em 5em 0; /* increase touch size area */
   display: none;
   position: fixed;
   top: 0;
@@ -271,10 +267,7 @@ html, body {
   & {background-color: transparent;}
 }
 
-
-////////////////////////////////////////////////////////////////////////////////
-// PAGE LAYOUT AND CODE SAMPLE BACKGROUND
-////////////////////////////////////////////////////////////////////////////////
+/* PAGE LAYOUT AND CODE SAMPLE BACKGROUND */
 
 .page-wrapper {
   margin-left: $nav-width;
@@ -284,13 +277,13 @@ html, body {
   background-color: $main-bg;
   min-height: 100%;
 
-  padding-bottom: 1px; // prevent margin overflow
+  padding-bottom: 1px; /* prevent margin overflow */
 
-  // The dark box is what gives the code samples their dark background.
-  // It sits essentially under the actual content block, which has a
-  // transparent background.
-  // I know, it's hackish, but it's the simplist way to make the left
-  // half of the content always this background color.
+  /* The dark box is what gives the code samples their dark background. */
+  /* It sits essentially under the actual content block, which has a */
+  /* transparent background. */
+  /* I know, it's hackish, but it's the simplist way to make the left */
+  /* half of the content always this background color. */
   .dark-box {
     width: $examples-width;
     background-color: $examples-bg;
@@ -339,15 +332,13 @@ html, body {
   }
 }
 
-////////////////////////////////////////////////////////////////////////////////
-// CONTENT STYLES
-////////////////////////////////////////////////////////////////////////////////
-// This is all the stuff with the light background in the left half of the page
+/* CONTENT STYLES */
+/* This is all the stuff with the light background in the left half of the page */
 
 .content {
-  // fixes webkit rendering bug for some: see #538
+  /* fixes webkit rendering bug for some: see #538 */
   -webkit-transform: translateZ(0);
-  // to place content above the dark box
+  /* to place content above the dark box */
   position: relative;
   z-index: 30;
 
@@ -370,7 +361,7 @@ html, body {
     padding-left: $main-padding + 15px;
   }
 
-  // the div is the tocify hidden div for placeholding stuff
+  /* the div is the tocify hidden div for placeholding stuff */
   & > h1,
   & > h2,
   & > h3,
@@ -428,8 +419,8 @@ html, body {
     background-image: linear-gradient(to bottom, rgba(#fff, 0.2), rgba(#fff, 0));
   }
 
-  // h2s right after h1s should bump right up
-  // against the h1s.
+  /* h2s right after h1s should bump right up */
+  /* against the h1s. */
   h1 + h2, h1 + div + h2 {
     margin-top: $h1-margin-bottom * -1;
     border-top: none;
@@ -586,10 +577,8 @@ html, body {
   }
 }
 
-////////////////////////////////////////////////////////////////////////////////
-// CODE SAMPLE STYLES
-////////////////////////////////////////////////////////////////////////////////
-// This is all the stuff that appears in the right half of the page
+/* CODE SAMPLE STYLES */
+/* This is all the stuff that appears in the right half of the page */
 
 .content {
   &>div.highlight {
@@ -635,11 +624,9 @@ html, body {
   }
 }
 
-////////////////////////////////////////////////////////////////////////////////
-// RESPONSIVE DESIGN
-////////////////////////////////////////////////////////////////////////////////
-// These are the styles for phones and tablets
-// There are also a couple styles disperesed
+/* RESPONSIVE DESIGN */
+/* These are the styles for phones and tablets */
+/* There are also a couple styles disperesed */
 
 @media (max-width: $tablet-width) {
   .toc-wrapper {
@@ -700,7 +687,7 @@ html, body {
 }
 
 
-// Force code (<pre>) into the center column #855
+/* Force code (<pre>) into the center column #855 */
 .center-column {
     float: left !important;
     background-color: #f0f0f0 !important;
@@ -708,11 +695,11 @@ html, body {
     clear: none !important;
     padding-top: 1em !important;
     margin-right: $examples-width !important;
-    width: 100% !important;     // May need to adjust this
+    width: 100% !important;     /* May need to adjust this */
     text-shadow: 0 0 0 rgba(0, 0, 0, 0) !important;
 }
 
-// A variation of the above designed to fit in tables
+/* A variation of the above designed to fit in tables */
 .table-code {
     float: left !important;
     background-color: #f0f0f0 !important;
@@ -722,11 +709,11 @@ html, body {
     padding-bottom: 1em !important;
     padding-left: 1em !important;
     margin-right: $examples-width !important;
-    width: $examples-width !important;     // May need to adjust this
+    width: $examples-width !important;     /* May need to adjust this */
     text-shadow: 0 0 0 rgba(0, 0, 0, 0) !important;
 }
 
-// indents create issues with width
+/* indents create issues with width */
 .center-column-nonindent {
     float: left !important;
     background-color: #f0f0f0 !important;
@@ -736,11 +723,11 @@ html, body {
     padding-bottom: 1.5em !important;
     margin-right: $examples-width !important;
     margin-bottom: 2em !important;
-    width: 50% !important;     // May need to adjust this
+    width: 50% !important;     /* May need to adjust this */
     text-shadow: 0 0 0 rgba(0, 0, 0, 0) !important;
 }
 
-// clipboard button
+/* clipboard button */
 .clipboard_button {
   background-color: #dadee0;
   color: white;
@@ -756,12 +743,12 @@ html, body {
   padding-bottom: 3px;
 }
 
-// hover
+/* hover */
 .clipboard_button:hover {
   background-color: #c4c7c9;
 }
 
-// on click
+/* on click */
 .clipboard_button:active {
   background-color: #989b9c;
 }
@@ -805,7 +792,7 @@ html, body {
   opacity: 1;
 }
 
-// fake header to address issue where code pushes HTTP Req down the page
+/* fake header to address issue where code pushes HTTP Req down the page */
 .fake_header {
   @extend %header-font;
   font-size: 16px;
