:sparkles: add copy trade

--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -248,7 +248,7 @@ html, body {
     transform: rotate(-90deg) translate(-100%, 0);
     border-radius: 0 0 0 5px;
   }
-  padding: 0 1.5em 5em 0; // increase touch size area
+  padding: 0 1.5em 5em 0; /* increase touch size area */
   display: none;
   position: fixed;
   top: 0;
@@ -284,7 +284,7 @@ html, body {
   background-color: $main-bg;
   min-height: 100%;
 
-  padding-bottom: 1px; // prevent margin overflow
+  padding-bottom: 1px; /* prevent margin overflow */
 
   /* The dark box is what gives the code samples their dark background. */
   /* It sits essentially under the actual content block, which has a */
@@ -708,7 +708,7 @@ html, body {
     clear: none !important;
     padding-top: 1em !important;
     margin-right: $examples-width !important;
-    width: 100% !important;     // May need to adjust this
+    width: 100% !important;     /* May need to adjust this */
     text-shadow: 0 0 0 rgba(0, 0, 0, 0) !important;
 }
 
@@ -722,7 +722,7 @@ html, body {
     padding-bottom: 1em !important;
     padding-left: 1em !important;
     margin-right: $examples-width !important;
-    width: $examples-width !important;     // May need to adjust this
+    width: $examples-width !important;     /* May need to adjust this */
     text-shadow: 0 0 0 rgba(0, 0, 0, 0) !important;
 }
 
@@ -736,7 +736,7 @@ html, body {
     padding-bottom: 1.5em !important;
     margin-right: $examples-width !important;
     margin-bottom: 2em !important;
-    width: 50% !important;     // May need to adjust this
+    width: 50% !important;     /* May need to adjust this */
     text-shadow: 0 0 0 rgba(0, 0, 0, 0) !important;
 }
 
