--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -39,7 +39,7 @@ under the License.
       gtag('config', 'UA-158616893-1');
     </script>
 
-    <%= favicon_tag "favicon.ico" %>
+    <%= favicon_tag "https://static.phemex.com/s/home/logo/favicon-v4.ico" %>
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
